--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <header>
-        <h2>cabeçalho</h2>
+        <h2>Carros</h2>
     </header>
     <main>
-        <h2> corpo da pagina</h2>
+        <h2> Tudo começou com a criação do primeiro veículo automovel em </h2>
 
     </main>
     <footer>
