--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Principal</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <title>História dos Automóveis</title>
 
 </head>
-
 <body>
-    <header>
-        <h2>Carros</h2>
-    </header>
-    <main>
-        <h2> Tudo começou com a criação do primeiro veículo automovel em </h2>
-
-    </main>
-    <footer>
-        <h2>Rodape</h2>
-    </footer>
+    <div class="container">
+        <h1>História dos Automóveis</h1>
+        
+        <div class="car">
+            <h2>Ford T (1908)</h2>
+            <img src="images/ford-t.jpg" alt="Ford T">
+            <p>O Ford Model T foi um dos primeiros automóveis produzidos em massa, revolucionando a indústria automobilística e tornando os carros acessíveis a um público mais amplo.</p>
+        </div>
+        
+        <div class="car">
+            <h2>BYD Han (2023)</h2>
+            <img src="images/byd-han.jpg" alt="BYD Han">
+            <p>O BYD Han é um sedã elétrico de alto desempenho com tecnologia avançada, grande autonomia e um design moderno, representando o futuro dos automóveis.</p>
+        </div>
+    </div>
 </body>
-
 </html>
