--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>Cabeçalho</h2>
 
         <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/logo.png" alt="Logotipo da Tropicália" class="nav-img" loading="lazy">
+            <img src="" alt="Logotipo da Carros online" class="nav-img" loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"> <a href="#inicio"> Início </a> </li>
                 <li class="nav-item"> <a href="#galeria"> Galeria </a> </li>
@@ -45,7 +45,7 @@
             <div class="container mt-3 fundo-galeria">
 
                 <div class="col-md-4">
-                    <img src="" alt="imagem do ford t">
+                    <img src="img/TModel.jpg" alt="imagem do ford t">
                 </div>
 
                 <div class="col-md-4">
