--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <i class="bi bi-tiktok"></i>
         <p class="mt-3">Desenvolvido por Andrei Lobato dos Santos. Projeto fictício sem fins comerciais</p>
     </footer>
+     <script src="script.js"></script>
 </body>
 
 </html>
